# Displacement-MicroMap-Toolkit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md
meshops_bake/: CMakeLists.txt  README.md  meshops_bake.cpp  meshops_bake_batch.cpp  meshops_bake_batch.hpp  meshops_bake_vk.cpp  meshops_bake_vk.hpp  scoped_timer.cpp  scoped_timer.hpp
meshops_bake/shaders/: bary_trace.comp  host_device.h  resample.frag  resample.vert  trace_utils.glsl  vertex_types.h
meshops_core/: CMakeLists.txt  README.md
meshops_core/include/imageio/: imageio.hpp
meshops_core/include/meshops/: bias_scale.hpp  meshops_api.h  meshops_array_view.h  meshops_array_view.natvis  meshops_mesh_data.h  meshops_mesh_view.h  meshops_operations.h  meshops_types.h  meshops_vk.h
meshops_core/include/meshops_internal/: heightmap.hpp  mesh_view.hpp  meshops_context.h  meshops_device_mesh.h  meshops_texture.h  meshops_vertexattribs.h  octant_encoding.h  pn_triangles.hpp  umesh_util.hpp
meshops_core/include/microutils/: microutils.hpp  microutils_compression.hpp
meshops_core/src/: heightmap.cpp  imageio.cpp  meshops_compression.cpp  meshops_context.cpp  meshops_device_mesh.cpp  meshops_operations.cpp  meshops_tangents_lengyel.cpp  meshops_tangents_lengyel.hpp  meshops_tangents_liani.cpp  meshops_tangents_liani.hpp  meshops_tessellation.cpp  meshops_texture.cpp  meshops_types.cpp  meshops_vertexattribs.cpp  microutils.cpp  microutils_compression.cpp  mikktspace.c  umesh_util.cpp
micromesh_python/: CMakeLists.txt  README.md  all-deps.packman.xml  install_jupyterlab.cmd.in  package.py.in  py_conversions.hpp  py_enums.hpp  py_micromesh.cpp  py_operations.hpp  py_types.hpp  python.cmd.in  start_jupyterlab.cmd.in  test.py
micromesh_python/notebook/: micromesh.ipynb
micromesh_python/notebook/utils/: __init__.py  assets.py  mesh.py
micromesh_python/schema/: api.h  displacementMicromapAPI.cpp  displacementMicromapAPI.h  generatedSchema.usda  module.cpp  plugInfo.json  schema.usda  tokens.cpp  tokens.h  wrapDisplacementMicromapAPI.cpp  wrapTokens.cpp
micromesh_python/schema/nvMicromesh/: __init__.py
micromesh_python/schema/nvMicromesh/resources/: plugInfo_linux-x86_64.json  plugInfo_windows-x86_64.json
micromesh_tool/: CMakeLists.txt  README.md
micromesh_tool/include/: tool_bake.hpp  tool_bary.hpp  tool_context.hpp  tool_displacedtessellate.hpp  tool_generate.hpp  tool_image.hpp  tool_merge.hpp  tool_merge_args.hpp  tool_mesh.cpp  tool_mesh.hpp  tool_optimize.hpp  tool_pretessellate.hpp  tool_remesh.hpp  tool_scene.hpp
micromesh_tool/shaders/: pullpush.comp
micromesh_tool/src/: baker_manager.cpp  baker_manager.hpp  dlib_url.h  gltf.cpp  gltf.hpp  inputparser.hpp  main.cpp  mesh_view_conv.cpp  mesh_view_conv.hpp  pullpush_filter.cpp  pullpush_filter.hpp  tinygltf_impl.cpp  tool_bake.cpp  tool_bake_args.cpp  tool_bary.cpp  tool_context.cpp  tool_displacedtessellate.cpp  tool_generate.cpp  tool_image.cpp  tool_merge.cpp  tool_merge_args.cpp  tool_meshops_objects.hpp  tool_optimize.cpp  tool_pretessellate.cpp  tool_remesh.cpp  tool_scene.cpp  tool_version.h.in
micromesh_tool/src/gltf/: NV_micromesh_extension_types.hpp  micromesh_util.cpp  micromesh_util.hpp
micromesh_toolbox/: CMakeLists.txt  README.md
micromesh_toolbox/cmake/: FindNsightAftermath.cmake
micromesh_toolbox/resources/: micromesh_ico_256.h  micromesh_ico_32.h  micromesh_ico_64.h
micromesh_toolbox/shaders/: colormap.glsl  common.h  common_barymap.h  common_micromesh.h  common_micromesh_compressed.h  config.h  device_host.h  dh_bindings.h  dh_scn_desc.h  draw_compressed_basic.frag.glsl  draw_compressed_basic.mesh.glsl  draw_compressed_basic.task.glsl  draw_heightmap.frag.glsl  draw_heightmap.mesh.glsl  draw_heightmap.task.glsl  get_hit.glsl  hbao.h  hbao_blur.comp  hbao_blur.glsl  hbao_blur_apply.comp  hbao_calc.comp  hbao_deinterleave.comp  hbao_depthlinearize.comp  hbao_reinterleave.comp  hbao_viewnormal.comp  hit_state.h  lighting.glsl  mat_eval.glsl  micromesh_decoder.glsl  micromesh_decoder_api.glsl  micromesh_decoder_config.glsl  micromesh_decoder_subtri.glsl  micromesh_loader.glsl  micromesh_utils.glsl  octant_encoding.h  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  payload.glsl  (+13 more)
micromesh_toolbox/src/: main.cpp  settings.hpp  tinygltf_impl.cpp  toolbox_scene.cpp  toolbox_scene.hpp  toolbox_scene_rtx.cpp  toolbox_scene_rtx.hpp  toolbox_scene_vk.cpp  toolbox_scene_vk.hpp  toolbox_version.h.in  toolbox_viewer.cpp  toolbox_viewer.hpp  vulkan_mutex.cpp  vulkan_mutex.h
micromesh_toolbox/src/aftermath/: nsight_aftermath_gpu_crash_tracker.cpp  nsight_aftermath_gpu_crash_tracker.h  nsight_aftermath_helpers.h
micromesh_toolbox/src/elements/: element_nvml.hpp  element_testing.hpp  nvml_monitor.hpp
micromesh_toolbox/src/hbao/: hbao_pass.cpp  hbao_pass.hpp
micromesh_toolbox/src/meshlet/: barymap_vk.cpp  barymap_vk.hpp
micromesh_toolbox/src/micromap/: device_micromap.cpp  device_micromap.hpp  microdisp_shim.hpp  micromesh_compressed_vk.cpp  micromesh_compressed_vk.hpp  micromesh_decoder_subtri_vk.cpp  micromesh_decoder_subtri_vk.hpp  micromesh_decoder_utils_vk.cpp  micromesh_decoder_utils_vk.hpp
micromesh_toolbox/src/ui/: ui_about.cpp  ui_about.hpp  ui_axis.cpp  ui_axis.hpp  ui_baker.cpp  ui_busy_window.hpp  ui_color_picker.hpp  ui_displace_tessellate.cpp  ui_environment.cpp  ui_environment.hpp  ui_micromesh_process.cpp  ui_micromesh_process.hpp  ui_micromesh_tools.hpp  ui_optimizer.cpp  ui_pretess.cpp  ui_raster.cpp  ui_raster.hpp  ui_raytracing.hpp  ui_remesher.cpp  ui_rendering.cpp  ui_rendering.hpp  ui_statistics.cpp  ui_statistics.hpp  ui_utilities.cpp  ui_utilities.hpp  ui_widgets.cpp  ui_widgets.hpp
mini_samples/: CMakeLists.txt
mini_samples/dmm_displacement/: CMakeLists.txt  README.md
mini_samples/dmm_displacement/shaders/: device_host.h  dh_bindings.h  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  payload.h
mini_samples/dmm_displacement/src/: dmm_process.cpp  dmm_process.hpp  dmm_raytrace.cpp  nesting_scoped_timer.cpp  nesting_scoped_timer.hpp
(+28 files in other folders)
